Fix: CSS / Shorten justify & align classes #11

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -268,6 +268,16 @@ h6 {
   align-items: center;
 }
 
+.flex-j-center {
+  display: flex;
+  justify-content: center;
+}
+
+.flex-i-center {
+  display: flex;
+  align-items: center;
+}
+
 .gap-3xl {
   gap: 3rem;
 }
@@ -300,39 +310,39 @@ h6 {
   flex-shrink: 0;
 }
 
-.justify-center {
+.j-center {
   justify-content: center;
 }
 
-.justify-start {
+.j-start {
   justify-content: start;
 }
 
-.justify-end {
+.j-end {
   justify-content: end;
 }
 
-.justify-between {
+.j-between {
   justify-content: space-between;
 }
 
-.justify-around {
+.j-around {
   justify-content: space-around;
 }
 
-.justify-evenly {
+.j-evenly {
   justify-content: space-evenly;
 }
 
-.items-center {
+.i-center {
   align-items: center;
 }
 
-.items-start {
+.i-start {
   align-items: start;
 }
 
-.items-end {
+.i-end {
   align-items: end;
 }
 
